DGC-303: Spacing issue for announcements at mobile breakpoint fixed.

--- a/docroot/themes/custom/twentyeighteen/sass/components/views/_announcements.scss
+++ b/docroot/themes/custom/twentyeighteen/sass/components/views/_announcements.scss
@@ -13,6 +13,7 @@ aside .block-views-blockspecial-announcements-display-block-3 {
   box-sizing: border-box;
   background: linear-gradient(rgba($blk, 0.2) 0%, rgba($dark-gray, 1) 25%), rgba($dark-gray, 1);
   letter-spacing: 0.02em;
+  margin-bottom: 0;
 
   &::after {
     content: ' ';
